--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="/doc/under-construction.svg" alt="" style="max-width: 300px;">
         </div>
         <p class="text-center mb-5 text-lg dark:text-jacarta-300 z-10">
-            <a href="mailto:tugkan@inventordanismanlik.com" class="underline">tugkan@inventordanismanlik.com</a>
+            <a href="mailto:tugkan@inventordanismanlik.com.tr" class="underline">tugkan@inventordanismanlik.com.tr</a>
         </p>
     </section>
 </main>
